<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:background="@color/gray_80"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_email"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginStart="14dp"/>

            <Button
                android:id="@+id/signOutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:textColor="@color/gray_80"
                android:textStyle="bold"
                android:backgroundTint="@color/white"
                android:layout_marginEnd="14dp"/>
        </LinearLayout>

        <TextView
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/welcome"
            android:gravity="center"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/white" />
    </LinearLayout>
</layout>